--- a/title.html
+++ b/title.html
@@ -1,9 +1,17 @@
-<title>Jitsi Meet</title>
-<meta property="og:title" content="Jitsi Meet"/>
-<meta property="og:image" content="images/jitsilogo.png?v=1"/>
-<meta property="og:description" content="Join a WebRTC video conference powered by the Jitsi Videobridge"/>
-<meta description="Join a WebRTC video conference powered by the Jitsi Videobridge"/>
-<meta itemprop="name" content="Jitsi Meet"/>
-<meta itemprop="description" content="Join a WebRTC video conference powered by the Jitsi Videobridge"/>
-<meta itemprop="image" content="images/jitsilogo.png?v=1"/>
-<link rel="icon" type="image/png" href="images/favicon.ico?v=1"/>
+<title>Learngram Live</title>
+<meta property="og:title" content="Learngram Live" />
+<meta property="og:image" content="images/jitsilogo.png?v=1" />
+<meta
+    property="og:description"
+    content="Join a WebRTC video conference powered by the Jitsi Videobridge"
+/>
+<meta
+    description="Join a WebRTC video conference powered by the Jitsi Videobridge"
+/>
+<meta itemprop="name" content="Learngram Live" />
+<meta
+    itemprop="description"
+    content="Join a WebRTC video conference powered by the Jitsi Videobridge"
+/>
+<meta itemprop="image" content="images/jitsilogo.png?v=1" />
+<link rel="icon" type="image/png" href="images/favicon.ico?v=1" />
